# predeployed-generator

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  test.yml
scripts/: build_package.sh  generate_meta.py  prepare_artifacts.py  prepare_artifacts.sh
src/predeployed_generator/: contract_generator.py  tools.py  upgradeable_contract_generator.py
src/predeployed_generator/openzeppelin/: access_control_enumerable_generator.py  openzeppelin_contract_generator.py  proxy_admin_generator.py  transparent_upgradeable_proxy.py  transparent_upgradeable_proxy_generator.py
test/: requirements.txt  test_access_control_enumerable_generator.py  test_artifacts_handler.py  test_contract_generator.py  test_proxy_admin_generator.py  test_transparent_upgradeable_proxy_generator.py  test_upgradeable_contract_generator.py
test/test_solidity_project/: hardhat.config.ts  package.json
test/test_solidity_project/contracts/: TestContract.sol
test/tools/: base_genesis.json  custom_contract_generator.py  test_openzeppelin.py  test_predeployed.py  test_solidity_project.py
