[metadata]
name = predeployed-generator
version = file: version.txt
author = Dmytro Stebaiev
author_email = dmytro@skalelabs.com
description = A tool for generating memory layout of smart contracts written in solidity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skalenetwork/predeployed-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    web3

[options.packages.find]
where = src
